--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="strPlayerPvPPoint">PvP Point</string>
     <string name="strPlayerPvEPoint">PvE Point</string>
     <string name="computer_player_name">The Computer</string>
+    <string name="strInfo">Informations</string>
 
     <!-- Items of the gamemode selection spinner -->
     <string-array name="gamemodes">
