audio: Add roll sound

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@ A team of four members:\n
 -   Derzsi Dániel\n\n
 This project was created as part of an Erasmus programme, this is our final dissertation.\n\n
 Project information:\n\n
-This project is a simple, yet distractive game called FiveDive. Each player has 5 dice, with which they must reach a given score threshold.\n\n
+This project is a simple, yet distractive game called FiveDice. Each player has 5 dice, with which they must reach a given score threshold.\n\n
 Gameplay:\n
 In our game there are two game modes you can choose from:\n
 -   Player versus Player – where two players can play against each other,\n
